Fix small layout issues (inline and margins)

--- a/src/scss/includes/reviewScore.scss
+++ b/src/scss/includes/reviewScore.scss
@@ -2,7 +2,7 @@
   font-size: 14px;
   display: inline-block;
   color: #5c6f84;
-  margin: 2px 10px 0 0;
+  margin: 2px 10px 2px 0;
 
   &-stars {
     display: inline-block;
